# websites-crawler

./: .env.example  Dockerfile  README.md  domains.txt  load.py  main.py  model.onnx  move_to_redis_v4.ipynb  pyproject.toml
crawler/: __init__.py  constants.py  crawler.py  crawler_factory.py  manager.py  queue_crawler.py  run.py
crawler/db/: redis.py
crawler/utils/: __init__.py  content_processor.py  db.py  delay_controller.py  headers_generator.py  load_contents.py  robots.py  sitemap.py  url_loader.py
